# Rust-Simplex

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Cargo.toml  QoL Improvements  a.out  objdump  simp  simplex-c-documentation.odt
include/: bigm.h  fraction.h  input.h  m.h  matrix.h  simplex.h  simplexsolver.h  stages.h  tableux.h  visualcell.h
src/: CMakeLists.txt  a.out  balls  balls.rs  fraction.c  fraction.rs  input.c  lib.rs  m.c  m.rs  main.c  main.rs  matrix.c  matrix.rs  simplex.c  simplex.rs  stages.c  tableux.c  test.c  test_simplex.c  test_tableux  test_tableux.c  visualcell.c
src/build-cg/: CMakeCache.txt
src/lib/: CMakeLists.txt  bigm.c  fraction.c  input.c  matrix.c  simplex.c  stages.c  tableux.c  visualcell.c
tests/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~  test_fraction  test_fraction.c  test_logs_for_Docs
tests/.deps/: fraction.Po  test_fraction-fraction.Po  test_fraction-test_fraction.Po  test_fraction.Po
tests/autom4te.cache/: output.0  output.1  output.3  requests  traces.2  traces.3
