[package]
name = "simplexsolver"
version = "0.1.0"
edition = "2018"
default-run = "main"

[lib]
name = "simplexsolver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"num" = "0.4.0"
"num-traits" = "0.2.15"
"matrix" = "0.22.0"

[[bin]]
name = "main"
path = "src/main.rs"
