add_library(fraction fraction.c)
add_library(bigm bigm.c)
target_link_libraries(bigm fraction)
add_library(matrix matrix.c)
target_link_libraries(matrix bigm fraction)
add_library(simplex simplex.c)
target_link_libraries(simplex matrix bigm fraction)
add_library(visualcell visualcell.c)
add_library(tableux tableux.c)
target_link_libraries(tableux visualcell)
add_library(input input.c)
target_link_libraries(input tableux)
add_library(stages stages.c)
target_link_libraries(stages tableux)

target_include_directories(fraction   PUBLIC ../../include)
target_include_directories(bigm       PUBLIC ../../include)
target_include_directories(matrix     PUBLIC ../../include)
target_include_directories(simplex    PUBLIC ../../include)
target_include_directories(visualcell PUBLIC ../../include)
target_include_directories(tableux    PUBLIC ../../include)
target_include_directories(input      PUBLIC ../../include)
target_include_directories(stages     PUBLIC ../../include)

set_target_properties(fraction PROPERTIES PUBLIC_HEADER ../../include/fraction.h)
set_target_properties(bigm PROPERTIES PUBLIC_HEADER ../../include/bigm.h)
set_target_properties(matrix PROPERTIES PUBLIC_HEADER ../../include/matrix.h)
set_target_properties(simplex PROPERTIES PUBLIC_HEADER ../../include/simplex.h)
set_target_properties(visualcell PROPERTIES PUBLIC_HEADER ../../include/visualcell.h)
set_target_properties(tableux PROPERTIES PUBLIC_HEADER ../../include/tableux.h)
set_target_properties(input PROPERTIES PUBLIC_HEADER ../../include/input.h)
set_target_properties(stages PROPERTIES PUBLIC_HEADER ../../include/stages.h)